--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'kotlin'
 sourceCompatibility = 1.8
 
 jar {
-    baseName = 'serverless-poc'
+    baseName = 'serverlesspoc'
     version = '0.1.0'
 }
 
