--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ group 'novatec-gmbh'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'kotlin'
+apply plugin: 'application'
+
+mainClassName = 'serverlesspoc.Application'
+
 
 sourceCompatibility = 1.8
 
