--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.8.2"
+
 }
 
 compileKotlin {
