--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk:
   - oraclejdk8
+install:
+  - gradle shadowjar
 deploy:
   provider: lambda
   function_name: "serverless-poc"
