--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.2.10'
+    ext.kotlin_version = '1.2.30'
 
     repositories {
         mavenCentral()
@@ -14,18 +14,13 @@ buildscript {
     }
 }
 
-group 'novatec-gmbh'
+group 'de.novatec.aws.sample'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'kotlin'
 apply plugin: "com.github.johnrengelman.shadow"
 
 sourceCompatibility = 1.8
-
-jar {
-    baseName = 'serverlesspoc'
-    version = '0.1.0'
-}
 
 repositories {
     mavenCentral()
