--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,16 @@ buildscript {
          maven {
                 url "https://plugins.gradle.org/m2/"
         }
+        jcenter()
+        maven {
+            url  "https://dl.bintray.com/jkcclemens/maven"
+        }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // Required for Kotlin integration
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version" // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
         classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2" //Gradle plugin to create fat/uber JARs, apply file transforms, and relocate packages for applications and libraries
+
     }
 }
 
@@ -24,11 +29,16 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.8.2"
+    compile 'khttp:khttp:0.1.0'
+    compile group: 'com.google.gdata', name: 'core', version: '1.47.1'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+
 
 }
 
