--- a/build.gradle
+++ b/build.gradle
@@ -3,19 +3,20 @@ buildscript {
 
     repositories {
         mavenCentral()
-         maven {
-                url "https://plugins.gradle.org/m2/"
+        maven {
+            url "https://plugins.gradle.org/m2/"
         }
         jcenter()
         maven {
-            url  "https://dl.bintray.com/jkcclemens/maven"
+            url "https://dl.bintray.com/jkcclemens/maven"
         }
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // Required for Kotlin integration
-        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version" // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
-        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2" //Gradle plugin to create fat/uber JARs, apply file transforms, and relocate packages for applications and libraries
-
+        // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
+        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
+        //Gradle plugin to create fat/uber JARs, apply file transforms, and relocate packages for applications and libraries
+        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2"
     }
 }
 
@@ -34,12 +35,17 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.8.2"
     compile 'khttp:khttp:0.1.0'
-    compile group: 'com.google.gdata', name: 'core', version: '1.47.1'
+//    compile group: 'com.google.gdata', name: 'core', version: '1.47.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.11.333'
+    compile 'com.amazonaws:aws-lambda-java-core:1.0.0'
 
-
+    //Test dependencies
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.2.0'
+    testCompile 'org.assertj:assertj-core:3.10.0'
 }
 
 compileKotlin {
