--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.amazonaws:aws-lambda-java-core:1.0.0'
 
     //Test dependencies
+    testCompile "com.nhaarman:mockito-kotlin:1.5.0"
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
     testCompile 'org.junit.jupiter:junit-jupiter-params:5.2.0'
